--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,8 @@ dependencies {
     //EASY PERMISSIONS
     implementation 'pub.devrel:easypermissions:3.0.0'
 
+    //GLIDE
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
 }
