--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.2'
 
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+
 }
