--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,33 +34,28 @@ dependencies {
     //BUTTERKNIFE
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
-
+    //MATERIAL
     implementation 'com.google.android.material:material:1.1.0-alpha07'
-
     //ROOM
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     //VIEW MODEL & LIVE DATA
     implementation "android.arch.lifecycle:extensions:1.1.1"
-
+    //STETHO
     implementation 'com.facebook.stetho:stetho:1.5.1'
-
     //EASY PERMISSIONS
     implementation 'pub.devrel:easypermissions:3.0.0'
-
     //GLIDE
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-
-    //FOR SLIDER
-    implementation 'com.squareup.picasso:picasso:2.3.2'
-    implementation 'com.nineoldandroids:library:2.4.0'
-    implementation 'com.daimajia.slider:library:1.1.5@aar'
-
+    //MAPS
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
-
+    //GSON
     implementation 'com.google.code.gson:gson:2.8.2'
-
+    //JUNIT
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    //ICEPICK
+    implementation 'frankiesardo:icepick:3.2.0'
+    annotationProcessor 'frankiesardo:icepick-processor:3.2.0'
 
 }
