--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,8 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
 
+    //MOCKITO
+    testImplementation "org.mockito:mockito-core:2.26.0"
+    androidTestImplementation 'org.mockito:mockito-android:2.7.22'
+
 }
